bugfix Farbe des 2. Input Felds, Spacing.

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ td,tr{
 	border-radius: 5px;
 }
 #input2{
-	border: 3px solid blue;
+	border: 3px solid orange;
 	border-radius: 5px;
 }
 /*------------------------ Outro ------------------------*/
